Fix overflow scroll

--- a/restaurangbokning/src/pages/booking/booking.css
+++ b/restaurangbokning/src/pages/booking/booking.css
@@ -3,6 +3,11 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    height: 100vh;
+    height: calc(100vh - 67px);
     overflow: hidden;
-}
+  }
+  @media screen and (min-width: 780px) {
+    .booking-content{
+      height: calc(100vh - 50px);
+    }
+  }
