--- a/restaurangbokning/src/pages/contact/contact.css
+++ b/restaurangbokning/src/pages/contact/contact.css
@@ -1,6 +1,12 @@
 .page-contact {
   background: #FAFAFA;
-  height: 100vh;
+  height: calc(100vh - 67px);
+}
+
+@media screen and (min-width: 780px) {
+  .page-contact{
+    height: calc(100vh - 50px);
+  }
 }
 
 .contactHeader {
