--- a/restaurangbokning/src/pages/home/home.css
+++ b/restaurangbokning/src/pages/home/home.css
@@ -1,5 +1,5 @@
 .page-home {
-    
+
     display: flex;
     flex-wrap: wrap;
     background-image: url(../../images/homepage@1900px.jpg);
@@ -7,10 +7,13 @@
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
-    height: 100vh;
+    height: calc(100vh - 67px);
     overflow: hidden;
-
-    
+}
+@media screen and (min-width: 780px) {
+  .page-home{
+    height: calc(100vh - 50px);
+  }
 }
 
 .homeBox {
@@ -22,4 +25,3 @@
     padding-left: 5%;
     padding-right: 5%;
 }
-
